# freenove-tank

./: .gitignore  DESIGN.md  README.md  TODO.md
tankbot/: .env.example  Taskfile.yml  pyproject.toml
tankbot/calibration/: camera_extrinsics.yaml  camera_intrinsics.yaml
tankbot/docs/: autonomy_perception_redesign.md  frontier_exploration_plan.md
tankbot/scripts/: dev-tmux.sh  mpu6050_test.py  patch-mast3r-slam.sh  patch-monogs.sh
tankbot/src/tankbot/desktop/autonomy/: benchmark_depth.py  calibrate_camera.py  dataset.py  frontier.py  planning.py  projection_inspect.py  reactive_engine.py  record_robot_stream.py  replay_frontier.py  replay_reactive.py  replay_scanmatch.py  replay_slam_dataset.py  robot_client.py  rolling_frontier.py  scanmatch_eval.py  slam.py  vision.py
tankbot/src/tankbot/desktop/autonomy/depth/: __init__.py  base.py  depth_anything_v2.py  depth_pro.py  registry.py  unidepth.py
tankbot/src/tankbot/desktop/autonomy/reactive/: __init__.py  extrinsics.py  grid.py  gyro.py  intrinsics.py  policy.py  pose.py  projection.py  safety.py  scan.py  scan_match.py  scan_match_pose.py  world_map.py
tankbot/src/tankbot/robot/: config.py  main.py
tankbot/src/tankbot/robot/drivers/: __init__.py  camera.py  imu.py  infrared.py  led.py  motor.py  rpi_ledpixel.py  servo.py  spi_ledpixel.py  ultrasonic.py
tankbot/src/tankbot/robot/protocol/: legacy_tcp.py  websocket_api.py
tankbot/src/tankbot/shared/: protocol.py
tankbot/tankbot_web/: .gitignore  README.md  mix.exs
tankbot/tankbot_web/assets/: package-lock.json  package.json
tankbot/tankbot_web/assets/css/: app.css
tankbot/tankbot_web/assets/js/: app.js
tankbot/tankbot_web/assets/js/hooks/: blockly_hook.js  drive_hook.js  map_hook.js  map_zoom_hook.js  splat_hook.js
tankbot/tankbot_web/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
tankbot/tankbot_web/lib/: tankbot_web.ex  tankbot_web_web.ex
tankbot/tankbot_web/lib/tankbot_web/: application.ex  robot_socket.ex
tankbot/tankbot_web/lib/tankbot_web_web/: endpoint.ex  router.ex  telemetry.ex
tankbot/tankbot_web/lib/tankbot_web_web/components/: core_components.ex  layouts.ex
tankbot/tankbot_web/lib/tankbot_web_web/components/layouts/: root.html.heex
tankbot/tankbot_web/lib/tankbot_web_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
tankbot/tankbot_web/lib/tankbot_web_web/live/: blocks_live.ex  dashboard_live.ex
tankbot/tankbot_web/test/support/: conn_case.ex
tankbot/tankbot_web/test/tankbot_web_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
tankbot/tests/: conftest.py  test_dataset.py  test_extrinsics_projection.py  test_grid.py  test_ground_truth.py  test_pose.py  test_replay_frontier.py  test_rolling_frontier.py  test_safety.py  test_scan.py  test_scan_match_pose.py  test_scanmatch_eval.py  test_scanmatch_recording.py  test_vision.py
