[project]
name = "tankbot"
version = "0.1.0"
description = "Autonomous tank robot — Pi brain + desktop GPU offload"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "websockets>=13.0",
]

[project.optional-dependencies]
# Install on the Raspberry Pi
robot = [
    "gpiozero",
    "numpy>=1.26",
    "picamera2",
    "rpi-hardware-pwm",
    "lgpio",
    "smbus2",
    "spidev",
]
# Install on the desktop
desktop = [
    "accelerate>=1.0",        # transformers device placement helpers
    "einops>=0.8.2",
    "huggingface_hub>=0.24",  # weight download for depth backends
    "lietorch",
    "natsort>=8.4.0",
    "pyrealsense2>=2.56.5.9235",
    "opencv-python>=4.10",
    "torch>=2.4",
    "numpy>=1.26",
    "Pillow",
    "plyfile>=1.0",          # PLY export for Gaussian Splat maps
    "timm>=1.0",              # vision backbones used by depth backends
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=4.45",     # AutoModelForDepthEstimation for Phase 0b backends
]

[project.scripts]
tankbot-robot = "tankbot.robot.main:main"
tankbot-vision = "tankbot.desktop.autonomy.vision:main"
tankbot-calibrate-camera = "tankbot.desktop.autonomy.calibrate_camera:main"
tankbot-record-robot-stream = "tankbot.desktop.autonomy.record_robot_stream:main"
tankbot-replay-slam-dataset = "tankbot.desktop.autonomy.replay_slam_dataset:main"
tankbot-benchmark-depth = "tankbot.desktop.autonomy.benchmark_depth:main"
tankbot-replay-reactive = "tankbot.desktop.autonomy.replay_reactive:main"
tankbot-reactive = "tankbot.desktop.autonomy.reactive_engine:main"
tankbot-replay-scanmatch = "tankbot.desktop.autonomy.replay_scanmatch:main"
tankbot-scanmatch-eval = "tankbot.desktop.autonomy.scanmatch_eval:main"
tankbot-replay-frontier = "tankbot.desktop.autonomy.replay_frontier:main"
tankbot-projection-inspect = "tankbot.desktop.autonomy.projection_inspect:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
lietorch = { path = "vendor/lietorch" }

[tool.hatch.build.targets.wheel]
packages = ["src/tankbot"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["tankbot"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "gpiozero.*",
    "picamera2.*",
    "libcamera.*",
    "rpi_hardware_pwm.*",
    "lgpio.*",
    "pigpio.*",
    "rpi_ledpixel.*",
    "spi_ledpixel.*",
    "cv2.*",
    "PIL.*",
    "plyfile.*",
    "mast3r_slam.*",
    "mast3r.*",
    "lietorch.*",
    "transformers.*",
    "unidepth.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# -ra: show summary of non-pass outcomes (skips, xfails) so silent skips don't
# hide test-surface regressions.
addopts = "-ra"
markers = [
    "slow: tests that depend on large cached artifacts (observations_*.npz) or GPU inference; run with `-m slow` to include",
]
